--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,10 @@
 [metadata]
-name = DynamoDBImportCSV
-version = 1.2.0
+name = dynamodb-csv
+version = 1.2.1
 description = Python command to import CSV into DynamoDB
 long_description = file: README.md
 long_description_content_type = text/markdown
+url = https://github.com/danishi/DynamoDBCSV
 keywords = AWS, DynamoDB, CSV
 license = MIT
 author = danishi
