--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
         node: [14]
     steps:
       - name: Checkout 🔔
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
 
       - name: Setup Python 🔧
         uses: actions/setup-python@v2
