--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ author = danishi
 author_email = dns2developer@gmail.com
 
 [options]
+python_requires = >=3.8
 zip_safe = False
 include_package_data = True
 packages =
