--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,17 +7,21 @@ on:
 
 jobs:
   ci:
-    runs-on: ubuntu-20.04
+    name: Python ${{ matrix.node_version }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8, 3.9]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - name: Checkout 🔔
         uses: actions/checkout@v2
 
-      - name: Setup Python 🔧
+      - name: Setup Python ${{ matrix.python-version }} 🔧
         uses: actions/setup-python@v2
         with:
-          python-version: 3.6
-          architecture: x64
+          python-version: ${{ matrix.python-version }}
 
       - name: Python Install dependencies 🧹
         run: |
