--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 1.3.2
 description = Python command to import CSV into DynamoDB
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/danishi/DynamoDBCSV
+url = https://github.com/danishi/DynamoDB-CSV
 keywords = AWS, DynamoDB, CSV
 license = MIT
 author = danishi
