--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "ms-python.python",
     "ms-python.vscode-pylance",
+    "njpwerner.autodocstring",
     "alefragnani.bookmarks",
     "CoenraadS.bracket-pair-colorizer",
     "sohamkamani.code-eol",
