--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,6 +39,7 @@
   "extensions": [
     "ms-python.python",
     "ms-python.vscode-pylance",
+    "njpwerner.autodocstring",
     "alefragnani.bookmarks",
     "CoenraadS.bracket-pair-colorizer",
     "sohamkamani.code-eol",
