--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = dynamodb-csv
-version = 1.3.2
-description = Python command to import CSV into DynamoDB
+version = 1.3.3
+description = A utility that allows CSV import / export to DynamoDB on the command line
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/danishi/DynamoDB-CSV
+url = https://github.com/danishi/dynamodb-csv
 keywords = AWS, DynamoDB, CSV
 license = MIT
 author = danishi
