--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,12 +7,8 @@ on:
     paths-ignore:
       - "**.md"
 
-env:
-  AWS_ACCESS_KEY_ID: foo
-  AWS_SECRET_ACCESS_KEY: bar
-
 jobs:
-  unit_tests:
+  ci:
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 15
@@ -42,26 +38,6 @@ jobs:
       - name: Run unit tests 🧪
         run: pytest
 
-  run_commands:
-    name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7]
-        os: [ubuntu-latest]
-        # python-version: [3.6, 3.7, 3.8, 3.9]
-        # os: [ubuntu-latest, windows-latest, macos-latest]
-
-    steps:
-      - name: Checkout 🔔
-        uses: actions/checkout@v2
-
-      - name: Setup Python ${{ matrix.python-version }} 🔧
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
       - name: Install dynamodb-csv 💉
         run: |
           python setup.py install
@@ -76,9 +52,14 @@ jobs:
       - name: Create table 🔨
         run: |
           aws dynamodb create-table --cli-input-json file://my_table.json --region ap-northeast-1 --endpoint-url http://localhost:8000
+        env:
+          AWS_ACCESS_KEY_ID: your_key
+          AWS_SECRET_ACCESS_KEY: your_secret_key
 
       - name: Run commands 🚀
         run: |
+          cp config.ini.example config.ini
+          echo "ENDPOINT_URL=http://localhost:8000" > config.ini
           dynamodb-csv -i -t my_table -f sample.csv
           dynamodb-csv -e -t my_table -o sample_exp.csv
           dynamodb-csv --truncate -t my_table
