--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,10 +14,8 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        python-version: [3.6, 3.7]
-        os: [ubuntu-latest]
-        # python-version: [3.6, 3.7, 3.8, 3.9]
-        # os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: [3.6, 3.7, 3.8, 3.9]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - name: Checkout 🔔
