add gsi export command

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,4 +78,5 @@ jobs:
           echo "ENDPOINT_URL=http://localhost:8000" >> config.ini
           dynamodb-csv -i -t my_table -f sample.csv
           dynamodb-csv -e -t my_table -o sample_exp.csv
+          dynamodb-csv -e -t my_table -idx NumberSK-index -o sample_gsi_exp.csv
           dynamodb-csv --truncate -t my_table
