fix ci workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,4 +80,5 @@ jobs:
           dynamodb-csv -e -t my_table -o sample_exp.csv
           dynamodb-csv -e -t my_table -idx NumberSK-index -o sample_gsi_exp.csv
           dynamodb-csv -e -t my_table -idx NumberSK-index -o sample_query_exp.csv
+          dynamodb-csv -e -t my_table -o sample_query_exp2.csv
           dynamodb-csv --truncate -t my_table
