--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -52,6 +52,8 @@
     "christian-kohler.path-intellisense",
     "redhat.vscode-yaml",
     "visualstudioexptteam.vscodeintellicode",
+    "mechatroner.rainbow-csv",
+    "phplasma.csv-to-table",
     "devAdvice.serverlessconsole"
   ],
 
