--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,9 @@ on:
       - master
     paths-ignore:
       - "**.md"
+      - ".devcontainer/**"
+      - ".github/**"
+      - ".vscode/**"
 
 jobs:
   unit_tests:
