ignore import error

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,3 +85,4 @@ jobs:
           dynamodb-csv -e -t my_table -idx NumberSK-index -o sample_query_exp.csv
           dynamodb-csv -e -t my_table -o sample_query_exp2.csv
           dynamodb-csv --truncate -t my_table
+          dynamodb-csv -i -t my_table -f sample.csv --ignore
