Add VSCode plugin

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -54,6 +54,7 @@
     "visualstudioexptteam.vscodeintellicode",
     "mechatroner.rainbow-csv",
     "phplasma.csv-to-table",
+    "janisdd.vscode-edit-csv",
     "devAdvice.serverlessconsole"
   ],
 
