--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -17,6 +17,7 @@
     "visualstudioexptteam.vscodeintellicode",
     "mechatroner.rainbow-csv",
     "phplasma.csv-to-table",
+    "janisdd.vscode-edit-csv",
     "devAdvice.serverlessconsole"
   ]
 }
