Add vscode extentions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -41,6 +41,7 @@
     "ms-python.vscode-pylance",
     "njpwerner.autodocstring",
     "alefragnani.bookmarks",
+    "usernamehw.errorlens",
     "CoenraadS.bracket-pair-colorizer",
     "sohamkamani.code-eol",
     "streetsidesoftware.code-spell-checker",
