--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "ms-python.vscode-pylance",
     "njpwerner.autodocstring",
     "alefragnani.bookmarks",
+    "usernamehw.errorlens",
     "CoenraadS.bracket-pair-colorizer",
     "sohamkamani.code-eol",
     "streetsidesoftware.code-spell-checker",
