--- a/pytest.ini
+++ b/pytest.ini
@@ -2,7 +2,7 @@
 testpaths = .
 python_files = test_*.py
 minversion = 6
-addopts = -s -vv
+addopts = -s -vv --cov --cov-report=xml
 
 log_file = pytest.log
 log_file_level = DEBUG
