--- a/.github/workflows/reviewdog.yaml
+++ b/.github/workflows/reviewdog.yaml
@@ -31,6 +31,19 @@ jobs:
           # GitHub Status Check won't become failure with warning.
           level: warning
 
+      - name: Python Install dependencies 🧹
+        run: |
+          pip3 install -r requirements-dev.txt
+
+      - name: Run unit tests 🧪
+        run: pytest
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+
       - name: Run Lizard 🌀
         uses: Uno-Takashi/Lizard-Runner@v3
         with:
