--- a/.github/release.yaml
+++ b/.github/release.yaml
@@ -9,6 +9,9 @@ changelog:
     - title: Bug Fixes
       labels:
         - bug
+    - title: Dependencies
+      labels:
+        - dependencies
     - title: Other Changes
       labels:
         - '*'
