--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,6 @@ minversion = 6
 addopts = -s -vv --cov --cov-report=xml
 
 log_file = pytest.log
-log_file_level = DEBUG
+# log_file_level = DEBUG
 log_file_date_format = %Y-%m-%d %H:%M:%S
 log_file_format = %(asctime)s %(levelname)s %(message)s
