vscode linter settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   // "editor.formatOnSave": true,
   "editor.renderWhitespace": "all",
+  "editor.formatOnSave": true,
   "terminal.integrated.scrollback": 10000,
   "extensions.ignoreRecommendations": false,
   "python.testing.pytestArgs": [
@@ -11,5 +12,10 @@
   "python.venvFolders": [
     "venv",
     ".venv"
-  ]
+  ],
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": false,
+  "python.linting.flake8Enabled": true,
+  "python.linting.lintOnSave": true,
+  "python.formatting.provider": "autopep8"
 }
