--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,6 +11,8 @@ FROM mcr.microsoft.com/vscode/devcontainers/ruby:${VARIANT}
 # [Choice] Node.js version: lts/*, 16, 14, 12, 10
 # ARG NODE_VERSION="lts/*"
 # RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"
+ARG NODE_VERSION="16"
+RUN su vscode -c "source /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"
 
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
