--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,6 +39,7 @@
   "extensions": [
     "ms-python.python",
     "ms-python.vscode-pylance",
+    "GitHub.vscode-github-actions",
     "njpwerner.autodocstring",
     "alefragnani.bookmarks",
     "usernamehw.errorlens",
