--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "ms-python.python",
     "ms-python.vscode-pylance",
+    "GitHub.vscode-github-actions",
     "njpwerner.autodocstring",
     "alefragnani.bookmarks",
     "usernamehw.errorlens",
