--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
@@ -44,7 +44,7 @@ jobs:
     timeout-minutes: 15
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest]
 
     steps:
@@ -65,14 +65,14 @@ jobs:
         uses: rrainn/dynamodb-action@v3.0.0
         with:
           port: 8000
-          cors: '*'
+          cors: "*"
 
       - name: Create table 🔨
         run: |
           aws dynamodb create-table --cli-input-json file://my_table.json --region ap-northeast-1 --endpoint-url http://localhost:8000
         env:
-          AWS_ACCESS_KEY_ID: your_key
-          AWS_SECRET_ACCESS_KEY: your_secret_key
+          AWS_ACCESS_KEY_ID: "your_key"
+          AWS_SECRET_ACCESS_KEY: "your_secret_key"
 
       - name: Run commands 🚀
         run: |
