--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,8 +69,9 @@ jobs:
 
       - name: Create table 🔨
         run: |
-          aws dynamodb create-table --cli-input-json file://my_table.json --region ap-northeast-1 --endpoint-url http://localhost:8000
+          aws dynamodb create-table --cli-input-json file://my_table.json --endpoint-url http://localhost:8000
         env:
+          AWS_DEFAULT_REGION: ap-northeast-1
           AWS_ACCESS_KEY_ID: "foo"
           AWS_SECRET_ACCESS_KEY: "bar"
 
