--- a/.github/workflows/test-github-package-release.yaml
+++ b/.github/workflows/test-github-package-release.yaml
@@ -3,7 +3,7 @@ name: test-github-package-release
 on:
   push:
     tags:
-      - 'test-*'
+      - "test-*"
 
 jobs:
   deploy:
@@ -12,7 +12,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        python-version: ['3.10']
+        python-version: ["3.12"]
         os: [ubuntu-latest]
 
     steps:
