Add GitHub Actions.

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -17,3 +17,8 @@ updates:
         patterns:
           - "boto3"
           - "moto"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 10
